apps/overlays/development/patch-identity-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-service
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/environment: development
        app.kubernetes.io/instance: identity-service-development
    spec:
      containers:
        - name: app
