apps/overlays/development/patch-identity-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-service
spec:
  tls:
    - hosts:
        - identity-service-development.example.com
      secretName: identity-service-development-tls
  rules:
    - host: identity-service-development.example.com
